# Cuda-Programming

./: .gitignore  README.md
01_Hello_GPU/: README.md  main_sec.cu
03_C_AND_C++_REVIEW/00_Basic_View/: 00
03_C_AND_C++_REVIEW/01_Pointers/: 01.c  02  02.c  03  03.c  04  04.c
07_Faster_Matmul/: README.md
09_PyTorch_Extensions/: README.md
11_Extras/basic_opencv_example/: CMakeLists.txt  main.cpp
12.Project_ParallelVision/: CMakeLists.txt  README.md
12.Project_ParallelVision/include/: cuda_kernels.cuh  image_processor.h
12.Project_ParallelVision/src/: cuda_kernels.cu  image_processor.cu  main.cpp
13.Projects/: CMakeLists.txt  main.cpp
14.Matrix_Multiplication_Benchmark/: CMakeLists.txt  README.md  build.sh
14.Matrix_Multiplication_Benchmark/src/: benchmark.cpp  main.cpp  matrix_operations.cu  utils.cpp
15.general_image_processing_concepts_with_cuda/: CMakeLists.txt  README.md  build.sh  create_sample_image.py
15.general_image_processing_concepts_with_cuda/include/: image_processing.h  image_utils.h
15.general_image_processing_concepts_with_cuda/src/: image_processing.cu  image_utils.cpp  main.cpp
16.collection_of_basic_algorithms/: CMakeLists.txt  README.md  build.sh  main.cpp
16.collection_of_basic_algorithms/docs/: algorithm_details.md
16.collection_of_basic_algorithms/include/: algorithms.h  common.h  performance.h
16.collection_of_basic_algorithms/scripts/: analyze_results.py  run_ci.sh
16.collection_of_basic_algorithms/src/: bfs.cu  compact.cu  convolution.cu  histogram.cu  main.cu  matrix_multiply.cu  merge_sort.cu  prefix_sum.cu  radix_sort.cu  reduce.cu  scan.cu
16.collection_of_basic_algorithms/src/common/: cuda_utils.cu  memory_manager.cu  timer.cpp
16.collection_of_basic_algorithms/tests/: integration_tests.cu  test_main.cu  unit_tests.cu
17.encode_decode_pipeline_for_jetson_family/: CMakeLists.txt  README.md  build.sh
17.encode_decode_pipeline_for_jetson_family/docs/: notes.txt
17.encode_decode_pipeline_for_jetson_family/include/: cpu_pipeline.h  cuda_edge_detector.h  gpu_pipeline.h  performence_monitor.h
17.encode_decode_pipeline_for_jetson_family/scripts/: generate_graphs.py
17.encode_decode_pipeline_for_jetson_family/src/: cpu_pipeline.cpp  cuda_edge_detector.cpp  cuda_kernels.cu  gpu_pipeline.cpp  main.cpp  performence_monitor.cpp
17.encode_decode_pipeline_for_jetson_family/test/: test.txt
18.Calculate_Parallel_Histogram/: CMakeLists.txt  README.md  build.sh
18.Calculate_Parallel_Histogram/include/: histogram_cpu.cu  histogram_cuda.h  utils.h
18.Calculate_Parallel_Histogram/src/: histogram_cpu.cpp  histogram_cuda.cu  main.cpp  utils.cpp
19.Cuda_Vector_operations/: CMakeLists.txt  README.md  build.sh  pointcloud_processor.cpp
20.basic_two_vector_parallel_programming/: CMakeLists.txt  README.md  build.sh
20.basic_two_vector_parallel_programming/src/: vector_add.cu  vector_add_advanced.cu
21.cuda_mermory_management_and_optimization/: CMakeLists.txt  README.md
21.cuda_mermory_management_and_optimization/include/: benchmark_utils.h  memory_manager.cuh
21.cuda_mermory_management_and_optimization/scripts/: run_benchmarks.sh
21.cuda_mermory_management_and_optimization/src/: constant_memory_example.cu  global_memory_example.cu  main.cpp  memory_manager.cu  shared_memory_example.cu  unified_memory_example.cu
22.cuda_mlp-GPU_vs_CPU_Neural_Network_Training/: CMakeLists.txt  README.md
22.cuda_mlp-GPU_vs_CPU_Neural_Network_Training/include/: neural_net.hpp  utils.hpp
22.cuda_mlp-GPU_vs_CPU_Neural_Network_Training/src/: main.cpp  neural_net_cpu.cpp  neural_net_gpu.cu  utils.cpp
22.cuda_mlp-GPU_vs_CPU_Neural_Network_Training/tests/: mnist_accuracy.cpp
